--- a/apps/angular-vite/package.json
+++ b/apps/angular-vite/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "vite": "vite"
   },
   "private": true,
   "dependencies": {
@@ -16,7 +17,11 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@tailwindcss/postcss": "^4.1.8",
+    "@tailwindcss/vite": "^4.1.8",
+    "postcss": "^8.5.4",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -31,6 +36,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2"
+    "typescript": "~5.8.2",
+    "vite": "^6.3.5"
   }
 }
