--- a/apps/vue-vite/package.json
+++ b/apps/vue-vite/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.9",
     "@tailwindcss/vite": "^4.1.8",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.13"
